# backend/public/swagger.json
@@ -97,6 +97,9 @@
 					},
 					"ranked": {
 						"type": "boolean"
+					},
+					"move": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -180,6 +183,9 @@
 					},
 					"ranked": {
 						"type": "boolean"
+					},
+					"move": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -188,7 +194,8 @@
 					"date",
 					"winner",
 					"hidden",
-					"ranked"
+					"ranked",
+					"move"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -216,6 +223,9 @@
 					},
 					"ranked": {
 						"type": "boolean"
+					},
+					"move": {
+						"type": "string"
 					}
 				},
 				"type": "object",
@@ -596,7 +606,9 @@
 						}
 					}
 				]
-			},
+			}
+		},
+		"/moves/update/{id}": {
 			"patch": {
 				"operationId": "UpdateMove",
 				"responses": {
@@ -673,42 +685,6 @@
 					}
 				],
 				"parameters": []
-			},
-			"post": {
-				"operationId": "PostGame",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/GameOutputDTO"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Games"
-				],
-				"security": [
-					{
-						"jwt": [
-							"game:create"
-						]
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/GameInputDTO"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/games/{id}": {
@@ -863,6 +839,85 @@
 						}
 					}
 				]
+			}
+		},
+		"/games/create": {
+			"post": {
+				"operationId": "PostGame",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GameOutputDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [
+					{
+						"jwt": [
+							"game:create"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GameInputDTO"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/games/update/move/{id}": {
+			"patch": {
+				"operationId": "AddMove",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [
+					{
+						"jwt": [
+							"game:write"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GameInputPatchDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/auth": {
