# front/src/composables/game/gameApi.ts
@@ -1,5 +1,5 @@
 import axiosInstance from '@/config/AxiosConfig';
-import { ApiGetGameOfUser,ApiPostNewGame } from '@/constants/ApiUrl';
+import { ApiGetGameOfUser,ApiPostNewGame,ApiGetGameById,ApiUpdateMove } from '@/constants/ApiUrl';
 import type { Game } from '@/model/Game.model';
 
 
@@ -10,14 +10,26 @@ async function createGame(white:number, black:number, date:Date,hidden:boolean, 
     date:date.getDate(),
     winner: -1,
     hidden:hidden,
-    ranked:ranked
+    ranked:ranked,
+    move:""
   });
   return res.status;
 }
 
+async function updateMove(id:number , move:string): Promise<number> {
+  const res = await axiosInstance.post<{ }>(`${ApiPostNewGame}${id}`, {
+    move:move
+  });
+  return res.status;
+}
 
 async function getGameOfUser(id:number){
   const res = await axiosInstance.get<Game[]>(`${ApiGetGameOfUser}${id}`);
+  return res.data;
+}
+
+async function getGame(id:number){
+  const res = await axiosInstance.get<Game>(`${ApiGetGameById}${id}`);
   return res.data;
 }
 
